后台左侧菜单栏不支持visable属性

--- a/src/Org/OrgBundle/Resources/config/menus_admin.yml
+++ b/src/Org/OrgBundle/Resources/config/menus_admin.yml
@@ -2,6 +2,8 @@ admin_org_manage:
     name: 组织机构管理
     parent: admin_system
     group: 2
+    disable: true
+    visable: false
     children:
         admin_org:
             name: 组织机构
