--- a/src/Org/OrgBundle/Resources/config/menus_admin.yml
+++ b/src/Org/OrgBundle/Resources/config/menus_admin.yml
@@ -4,6 +4,7 @@ admin_org_manage:
     group: 2
     disable: true
     visable: false
+    after: admin_roles
     children:
         admin_org:
             name: 组织机构
