--- a/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
+++ b/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
@@ -10,8 +10,8 @@
 #   visable:                //可选
 #   icon:                   //可选
 #   data:                   //可选
-#   before:                 //可选
-#   after:                  //可选
+#   before:                 //可选 菜单出现位置在同级的某个菜单之前
+#   after:                  //可选 菜单出现位置在同级的某个菜单之后
 #   disable:                //角色管理分配权限默认开启不用选中
 
 #admin_block_visual_edit:
