--- a/src/Custom/WebBundle/Resources/config/routing.yml
+++ b/src/Custom/WebBundle/Resources/config/routing.yml
@@ -9,3 +9,11 @@ login:
 course_manage_test_check:
     pattern: /course/check/{id}/{status}/list
     defaults: { _controller: CustomWebBundle:Testpaper:teacherCheckInCourse }
+
+course_manage_list_teacher_test_reviewing:
+    pattern: /my/teacher/reviewing/test/list
+    defaults: { _controller: CustomWebBundle:Testpaper:listReviewingTest }
+
+course_manage_list_teacher_test_finished:
+    pattern: /my/teacher/finished/test/list
+    defaults: { _controller: CustomWebBundle:Testpaper:listFinishedTest }
