--- a/src/Permission/PermissionBundle/Resources/config/services.yml
+++ b/src/Permission/PermissionBundle/Resources/config/services.yml
@@ -1,6 +1,6 @@
 parameters:
     routing.loader.yml.class: Permission\Loader\YamlFileLoader
-    permission.path_regular_expression: ['/^\/admin/', '/^\/course\/\d+\/manage/', '/^\/classroom\/\d+\/manage/']
+    permission.path_regular_expression: ['/^\/admin/']
     router.options.matcher_dumper_class: Permission\Dumper\PhpMatcherDumper
 
 services:
