--- a/src/Org/OrgBundle/Resources/config/menus_admin.yml
+++ b/src/Org/OrgBundle/Resources/config/menus_admin.yml
@@ -2,8 +2,8 @@ admin_org_manage:
     name: 组织机构管理
     parent: admin_system
     group: 2
-    disable: true
-    visable: false
+    disable: false
+    visable: true
     children:
         admin_org:
             name: 组织机构
@@ -17,8 +17,8 @@ admin_user_org_update:
     visable: ( app.user.id != user.id )
     router_params:
         id: (user.id)
-    disable: true
-    visable: false
+    disable: false
+    visable: true
 
 # admin_move_course_to_org:
 #     name: 推送课程
