--- a/app/config/parameters_service.yml
+++ b/app/config/parameters_service.yml
@@ -1,6 +1,6 @@
 parameters:
     topxia_services:
-        'Crm.VipLevelServiceInfo' : 'CRM\DataProvider\VipLevel\Service\Impl\VipLevelServiceImpl'
+        'Crm.VipLevelService' : 'CRM\DataProvider\VipLevel\Service\Impl\VipLevelServiceImpl'
 
     topxia_daos:
         'Crm.VipLevelDao' :  'CRM\DataProvider\VipLevel\Service\Dao\Impl\VipLevelDaoImpl'
