fix: permission override routing.loader.yml

--- a/src/Permission/PermissionBundle/Resources/config/services.yml
+++ b/src/Permission/PermissionBundle/Resources/config/services.yml
@@ -1,5 +1,4 @@
 parameters:
-    routing.loader.yml.class: Permission\Loader\YamlFileLoader
     permission.path_regular_expression: ['/^\/admin/']
     router.options.matcher_dumper_class: Permission\Dumper\PhpMatcherDumper
 
@@ -29,8 +28,7 @@ services:
             - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse, priority:255 }
 
     routing.loader.yml:
-        class: '%routing.loader.yml.class%'
-        public: true
+        class: Permission\Loader\YamlFileLoader
         arguments: ['@file_locator']
         tags:
             - {name: routing.loader}
