--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -73,5 +73,7 @@ security:
         - { path: ^/common/crontab, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /password/reset, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /switch/language, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /translations, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /.*, role: ROLE_USER }
         #- { path: ^/_internal, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
