--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -17,7 +17,7 @@ framework:
     templating:
         engines: ['twig']
         assets_version: 7.2.0
-    default_locale:  "%default_locale%"
+    default_locale:  "en_US"
     trusted_proxies: ~
     session:
         handler_id:     session.handler.factory
