结构调整，类名称修改

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -101,7 +101,7 @@ parameters:
     topxia.upload.public_directory: "%kernel.root_dir%/../web/files"
     topxia.upload.public_url_path: "/files"
     topxia.upload.private_directory: "%kernel.root_dir%/data/private_files"
-    templating.asset.path_package.class: Topxia\Service\Component\Templating\Asset\PathPackage
+    templating.asset.path_package.class: Topxia\WebBundle\Twig\Asset\PathPackage
 
 services:
     session.handler.pdo.connection:
