使用新版的underscore

--- a/web/assets/libs/gallery/backbone/1.0.0/package.json
+++ b/web/assets/libs/gallery/backbone/1.0.0/package.json
@@ -10,7 +10,7 @@
   "spm": {
     "alias": {
       "$": "$",
-      "underscore": "gallery/underscore/1.4.4/underscore"
+      "underscore": "underscore"
     },
     "output": ["backbone.js"]
   }
