--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
 		"flexihash/flexihash": "^1.0.0",
 		"mockery/mockery": "^0.9.4",
 		"endroid/qrcode-bundle": "~1.6",
-		"bshaffer/oauth2-server-bundle": "^0.3.0"
+		"bshaffer/oauth2-server-bundle": "^0.3.0",
+		"codeages/rest-api-client": "^0.1.2"
 	},
 	"scripts" : {
 		"post-install-cmd" : [
