--- a/src/Topxia/WebBundle/Resources/config/routing.yml
+++ b/src/Topxia/WebBundle/Resources/config/routing.yml
@@ -1081,8 +1081,8 @@ course_lesson_marker_manage:
     defaults: { _controller: TopxiaWebBundle:Marker:manage }
 
 course_lesson_marker_manage_preview:
-    pattern:  /course/{courseId}/lesson/{lessonId}/marker/managePreview
-    defaults: { _controller: TopxiaWebBundle:Marker:managePreview }
+    pattern:  /course/{courseId}/lesson/{lessonId}/marker/preview
+    defaults: { _controller: TopxiaWebBundle:Marker:preview }
 
 course_lesson_marker_show:
     pattern:  /course/lesson/{lessonId}/marker/show
