--- a/app/config/biz.yml
+++ b/app/config/biz.yml
@@ -11,6 +11,6 @@ parameters:
 services:
     biz:
         class: Biz
-        arguments: ["%biz_config%"]
+        arguments: ["@service_container","%biz_config%"]
         tags:
             - { name: service.kernel }
