--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+	"name" : "topxia/edusoho",
+	"type" : "project",
+	"description" : "Edusoho",
 	"autoload" : {
 		"psr-0" : {
 			"" : [
@@ -11,67 +14,68 @@
 			"Topxia\\Api\\" : "api/src/Topxia/Api"
 		}
 	},
-	"config" : {
-		"bin-dir" : "bin"
-	},
-	"description" : "Edusoho",
-	"extra" : {
-		"branch-alias" : {
-			"dev-master" : "2.3-dev"
-		},
-		"incenteev-parameters" : {
-			"file" : "app/config/parameters.yml"
-		},
-		"symfony-app-dir" : "app",
-		"symfony-assets-install" : "relative",
-		"symfony-web-dir" : "web"
-	},
-	"minimum-stability" : "dev",
-	"name" : "topxia/edusoho",
-	"prefer-stable" : true,
 	"require" : {
 		"php" : ">=5.3.3",
-		"doctrine/orm": "^2.4.8",
-		"doctrine/doctrine-bundle": "~1.4",
-		"doctrine/doctrine-migrations-bundle" : "1.0.1",
-		"endroid/qrcode" : "1.5.4",
-		"ezyang/htmlpurifier" : "v4.7.0",
-		"gregwar/captcha":"v1.1",
-		"imagine/imagine" : "0.6.2",
-		"incenteev/composer-parameter-handler" : "v2.1.1",
-		"phpoffice/phpexcel" : "1.8.1",
+		"symfony/symfony" : "~2.8.12",
+		"symfony/assetic-bundle" : "~2.8.0",
+		"symfony/monolog-bundle" : "~2.11.1",
+		"symfony/security-acl": "~2.8.0",
+		"symfony/swiftmailer-bundle" : "~2.3.11",
+		"incenteev/composer-parameter-handler" : "~2.1.2",
 		"sensio/distribution-bundle" : "~5.0",
-		"sensio/framework-extra-bundle": "^3.0.2",
-		"sensio/generator-bundle" : "v2.4.5",
-		"symfony/assetic-bundle" : "2.8.*",
-		"symfony/monolog-bundle" : "2.8.*",
-		"symfony/swiftmailer-bundle" : "v2.3.8",
-		"symfony/symfony" : "2.8.*",
-		"twig/extensions" : "1.2.0",
-		"silex/silex" : "~2.0",
-		"willdurand/js-translation-bundle": "^2.5",
-		"asm89/twig-cache-extension": "~1.0",
-		"flexihash/flexihash": "^1.0.0",
-		"mockery/mockery": "^0.9.4",
-		"endroid/qrcode-bundle": "~1.6",
+		"sensio/framework-extra-bundle": "^3.0.16",
+		"silex/silex" : "~2.0.3",
+		"doctrine/orm": "^2.4.8",
+		"doctrine/doctrine-bundle": "~1.6.4",
+		"doctrine/doctrine-migrations-bundle" : "~1.2.0",
+		"endroid/qrcode" : "~1.7.4",
+		"ezyang/htmlpurifier" : "~4.8.0",
+		"gregwar/captcha":"~1.1.1",
+		"imagine/imagine" : "~0.6.3",
+		"phpoffice/phpexcel" : "~1.8.1",
+		"willdurand/js-translation-bundle": "~2.6.1",
+		"asm89/twig-cache-extension": "~1.3.0",
+		"flexihash/flexihash": "~2.0.2",
+		"endroid/qrcode-bundle": "~2.0.2",
 		"bshaffer/oauth2-server-bundle": "^0.3.0",
-		"codeages/biz-framework": "dev-master"
+		"codeages/biz-framework": "~0.0.7"
+	},
+	"require-dev": {
+	    "sensio/generator-bundle": "~3.0",
+	    "symfony/phpunit-bridge": "~3.1.5",
+	    "mockery/mockery": "~0.9.5"
 	},
 	"scripts" : {
 		"post-install-cmd" : [
-			"Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
 		],
 		"post-update-cmd" : [
-			"Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
 		]
 	},
-	"type" : "project"
+	"config" : {
+		"bin-dir" : "bin"
+	},
+	"extra" : {
+		"symfony-app-dir" : "app",
+		"symfony-web-dir" : "web",
+		"symfony-assets-install" : "relative",
+		"incenteev-parameters" : {
+			"file" : "app/config/parameters.yml"
+		},
+		"branch-alias" : {
+			"dev-master": "2.8-dev"
+		}
+	},
+	"prefer-stable" : true
 }
