--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -48,7 +48,7 @@ security:
                 failure_handler: topxia.authentication.failure_handler
                 success_handler: topxia.authentication.success_handler
             remember_me:
-                key: "%secret%"
+                secret: "%secret%"
                 lifetime: 31536000
                 path: /
                 domain: ~
