--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,6 +22,7 @@ framework:
     session:
         handler_id:  session.handler.factory
     fragments:       ~
+    assets: ~
 
 # Twig Configuration
 twig:
