fix for vendor update

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,7 +7,7 @@ imports:
 
 framework:
     # esi:             ~
-    translator:      { fallback: "%locale%" }
+    # translator:      { fallback: "%locale%" }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -22,6 +22,7 @@ framework:
     session:
         handler_id:  session.handler.factory
     fragments:       ~
+    http_method_override: true
     assets: ~
 
 # Twig Configuration
