--- a/app/config/biz.yml
+++ b/app/config/biz.yml
@@ -1,16 +1,21 @@
 parameters:
     biz_config:
+        debug: "%kernel.debug%"
         database:
             name: "%database_name%"
             user: "%database_user%"
             password: "%database_password%"
             host: "%database_host%"
-            driver: "%database_driver%"
-            charset: UTF-8
+            port: "%database_port%"
+            driver: pdo_mysql
+            charset: UTF8
+        cache_directory: "%kernel.root_dir%/../var/cache"
+        tmp_directory: "%kernel.root_dir%/../var/tmp"
+        log_directory: "%kernel.root_dir%/../var/logs"
 
 services:
     biz:
-        class: Biz
+        class: Biz\Biz
         arguments: ["@service_container","%biz_config%"]
         tags:
             - { name: service.kernel }
