--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
   - SYMFONY_VERSION="~2.8.12" DB=mysql
 
 before_script:
+  - echo -e "Host gitlab.howzhi.net:4422\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - mysql -e 'CREATE DATABASE `edusoho-test` DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci'
   - git submodule init
   - git submodule update
