--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor"]
 	path = vendor
-	url = ssh://git@gitlab.howzhi.net:4422/edusoho/vendor.git
+	url = http://gitlab.howzhi.net/edusoho/vendor.git
