--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,12 @@ before_install:
 
 before_script:
   - mysql -e 'CREATE DATABASE `edusoho-test` DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci'
+  - mysql -e "GRANT ALL PRIVILEGES ON `edusoho-test`.* TO 'tester'@'localhost' IDENTIFIED BY 'tester'"
+  - mysql -e "FLUSH PRIVILEGES"
+  - cp app/config/config_test.yml.dist app/config/config_test.yml
+
+script:
+  - phpunit -c app/
 
 cache:
   directories:
