--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,11 @@ before_install:
 
 before_script:
   - mysql -e 'CREATE DATABASE `edusoho-test` DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci'
-  - mysql -e "GRANT ALL PRIVILEGES ON edusoho-test.* TO 'tester'@'localhost' IDENTIFIED BY 'tester'"
-  - mysql -e "FLUSH PRIVILEGES"
+  - mysql -e "CREATE USER 'tester'@'localhost' IDENTIFIED BY 'tester'"
+  - mysql -e "GRANT ALL PRIVILEGES ON *.* TO 'tester'@'localhost'"
   - cp app/config/config_test.yml.dist app/config/config_test.yml
+  - cp app/config/parameters.yml.dist app/config/parameters.yml
+  - touch app/config/routing_plugins.yml
 
 script:
   - phpunit -c app/
