--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,17 @@ env:
 git:
     submodules: false
 
+mysql:
+
+
 before_install:
   - echo -e "Host gitlab.howzhi.net:4422\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - git submodule update --init --recursive
 
 before_script:
   - mysql -e 'CREATE DATABASE `edusoho-test` DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci'
-  - mysql -e "CREATE USER 'tester'@'localhost' IDENTIFIED BY 'tester'"
-  - mysql -e "GRANT ALL PRIVILEGES ON *.* TO 'tester'@'localhost'"
+  - mysql -u root -e "CREATE USER 'tester'@'localhost' IDENTIFIED BY 'tester'"
+  - mysql -u root -e "GRANT ALL PRIVILEGES ON *.* TO 'tester'@'localhost'"
   - cp app/config/config_test.yml.dist app/config/config_test.yml
   - cp app/config/parameters.yml.dist app/config/parameters.yml
   - touch app/config/routing_plugins.yml
