--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_script:
   - mysql -u root -e "CREATE USER 'tester'@'localhost' IDENTIFIED BY 'tester'"
   - mysql -u root -e "GRANT ALL PRIVILEGES ON *.* TO 'tester'@'localhost'"
   - cp app/config/parameters_test.yml.dist app/config/parameters_test.yml
+  - cp app/config/parameters.yml.dist app/config/parameters.yml
   - touch app/config/routing_plugins.yml
 
 script:
