--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
 		"willdurand/js-translation-bundle": "~2.6.1",
 		"asm89/twig-cache-extension": "~1.3.0",
 		"flexihash/flexihash": "~2.0.2",
-		"endroid/qrcode-bundle": "~2.0.2",
+		"endroid/qrcode-bundle": "v1.6.3",
 		"bshaffer/oauth2-server-bundle": "^0.3.0",
 		"codeages/biz-framework": "~0.1.2"
 	},
