--- a/src/CourseTask/TaskBundle/Resources/config/routing.yml
+++ b/src/CourseTask/TaskBundle/Resources/config/routing.yml
@@ -21,3 +21,7 @@ course_task_show:
 course_task_activity_show:
   pattern:  /course/{courseId}/task/{id}/activity_show
   defaults: { _controller: TaskBundle:Task:taskActivity }
+
+course_task_finish:
+  pattern:  /course/{courseId}/task/{id}/finish
+  defaults: { _controller: TaskBundle:Task:finish }
