--- a/vendor2/codeages/rest-api-client/phpunit.xml.dist
+++ b/vendor2/codeages/rest-api-client/phpunit.xml.dist
@@ -8,7 +8,7 @@
      processIsolation="false"
      stopOnFailure="false"
      syntaxCheck="false"
-     bootstrap="vendor/autoload.php">
+     bootstrap="../../autoload.php">
 
     <testsuites>
         <testsuite name="Test Suite">
