--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,8 @@ before_script:
   - touch app/config/routing_plugins.yml
 
 script:
-  - sudo usermod -a -G www-data $USER
-  - sudo chown -R www-data:www-data ./
-  - sudo chmod +x /home/travis
-  - sudo -E su $USER -c "php phpunit -c app/"
+  - sudo chmod -Rf 777 ./
+  - phpunic -c app/
 
 cache:
   directories:
