fix: symfony % 需要加上双引号

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,7 +32,7 @@ security:
         custom_provider:
             id: topxia.user_provider
 
-    role_hierarchy: %role_hierarchy%
+    role_hierarchy: "%role_hierarchy%"
 
     firewalls:
         dev:
