--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ src/Topxia/WebBundle/Resources/views/Test/*
 !/web/themes/block.json
 edusoho.komodoproject
 .project
+/vendor
 .settings
 composer.sublime-workspace
 web/assets/img/default/video.png
