--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ web/assets/img/default/video.png
 .phpintel*
 /src/Tests/*
 .crunch
+/app/config/parameters_test.yml
 *.css.map
 *.codekit
 web/php-performance.php
