--- a/src/Codeages/PluginBundle/Resources/config/services.yml
+++ b/src/Codeages/PluginBundle/Resources/config/services.yml
@@ -6,8 +6,13 @@ services:
             - %kernel.cache_dir%
             - %kernel.debug%
 
-    codeages_plugin.slot_twig_extension:
-        class: Codeages\PluginBundle\Twig\SlotExtension
-        public: false
-        tags:
-            - { name: twig.extension }
+    # codeages_plugin.slog_manager:
+    #     class: Codeages\PluginBundle\System\SlogMangaer
+        
+    # codeages_plugin.slot_twig_extension:
+    #     class: Codeages\PluginBundle\Twig\SlotExtension
+    #     public: false
+    #     arguments:
+    #         - @codeages_plugin.slog_manager
+    #     tags:
+    #         - { name: twig.extension }
