--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -24,7 +24,7 @@ framework:
         handler_id:  session.handler.factory
     fragments:       ~
     http_method_override: true
-    assets: %assets%
+    assets: ~
 
 # Twig Configuration
 twig:
