--- a/app/config/parameters_test.yml
+++ b/app/config/parameters_test.yml
@@ -3,8 +3,8 @@ parameters:
         debug: "%kernel.debug%"
         db.options:
             dbname: edusoho-test
-            user: root
-            password: 
+            user: tester
+            password: tester
             host: "%database_host%"
             port: "%database_port%"
             driver: pdo_mysql
